downgrade to java 8 :(